<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>dtu-pay-example</groupId>
    <artifactId>master</artifactId>
    <packaging>pom</packaging>
    <version>1.0-SNAPSHOT</version>
    <properties>
        <java.version>11</java.version>
        <spring.boot.version>2.1.1.RELEASE</spring.boot.version>
        <spring.framework.version>5.1.3.RELEASE</spring.framework.version>
        <jackson.version>2.9.6</jackson.version>
    </properties>

    <modules>
        <module>bank</module>
        <module>merchant</module>
        <module>dtu-pay</module>
        <module>shared</module>
        <module>choreography-checker</module>
    </modules>

    <dependencies>
        <dependency>
            <groupId>org.jetbrains.kotlin</groupId>
            <artifactId>kotlin-stdlib</artifactId>
            <version>1.3.11</version>
        </dependency>
    </dependencies>
</project>